ISIS-2265: prepares removal of StandaloneList
also decouples PersistenceSession from ObjectAdapter